sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.error
AlgSelectionSort:7: error: not found: value cel
    cel = 0;
    ^AlgSelectionSort:12: error: not found: value cel
        cel = j;
        ^AlgSelectionSort:15: error: not found: value cel
    echange(i,cel);
              ^